--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,13 @@
   <groupId>com.educba</groupId>
   <artifactId>JUnit-testing-demo1</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <!-- https://mvnrepository.com/artifact/junit/junit -->
+  <dependencies>
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13.2</version>
+    <scope>test</scope>
+</dependency>
+  </dependencies>
 </project>
